Bug 434280 - Labplot does not correctly restore plot area padding when reading a saved project file.
Summary: Labplot does not correctly restore plot area padding when reading a saved pro...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-11 13:09 UTC by Orestes Mas
Modified: 2021-03-12 22:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Orestes Mas 2021-03-11 13:09:56 UTC
SUMMARY
The plot area padding always is reset to default values after loading a project file saved with modified

STEPS TO REPRODUCE
1. Create new project
2. Add a worksheet and insert an xy-plot on it
3. Change the Plot Area Padding using the UI (select plot, then navigate to the "Plot Area" tab).
4. Save the project into a file.
5. Close the project and reopen it: the padding is reset to default values

OBSERVED RESULT
Plot area padding not saved into project file

EXPECTED RESULT
Padding saved like the rest of the project settings


SOFTWARE/OS VERSIONS
Windows: ?
macOS: ?
Linux: 4.19.0-14-amd64
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
LabPlot 2.9.0 compiled from sources (git commit e8c412faec)
Comment 1 Stefan Gerlach 2021-03-12 22:09:55 UTC
Git commit c48fb65d0118312c84849327cddd0a6aaed2c6ec by Stefan Gerlach.
Committed on 12/03/2021 at 22:08.
Pushed by sgerlach into branch 'master'.

Fix saving of plot padding and avoid checking for old settings
FIXED-IN: 2.9

M  +90   -86   src/backend/worksheet/plots/cartesian/CartesianPlot.cpp

https://invent.kde.org/education/labplot/commit/c48fb65d0118312c84849327cddd0a6aaed2c6ec