Fix saving of plot padding and avoid checking for old settings

BUG: 434280
FIXED-IN: 2.9